add removeitem & none function & rename section className

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
                 <button id="add-btn" class="btn">Add</button>
             </div>
         </header>
-        <section class="list-style">
+        <section id="checkList">
             <div class="todo-area">
                 <h3 class="todo-text">Todo</h3>
                 <ul id="my-todo" class="todo-style">
                     <!-- display todos here -->
-                    <div class="warning">none...</div>
                 </ul>
             </div>
             <div class="done-area">
