Add storage functionality by loaclstorage & To accommodate this feature, extensive adjustments to HTML and Js are necessary.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
         <section id="checkList">
             <div class="todo-area">
                 <h3 class="todo-text">Todo</h3>
+                <div class="todo-none"></div>
                 <ul id="my-todo" class="todo-style">
                     <!-- display todos here -->
                 </ul>
             </div>
             <div class="done-area">
                 <h3 class="done-text">Done</h3>
+                <div class="done-none"></div>
                 <ul id="done" class="done-style">
                     <!-- display todos here -->
                 </ul>
